--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Ethereal by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>BERG DESIGNER</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -132,7 +130,7 @@
 											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
 											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
 											<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+											<li class="icon brands fa-medium-m"><a href="tag.html">Tabela Tag's</a></li>
 										</ul>
 									</div>
 								</div>
@@ -408,7 +406,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; Untitled. ReDesign: <a href="#">LABE digital</a>.</div>
 
 					</div>
 
