--- a/tag.html
+++ b/tag.html
@@ -18,6 +18,11 @@
 				width: 100%;
 			}
 
+			.logo {
+				margin-right: auto; margin-left: auto; align-items: center;
+
+			}
+
 		</style>
 
 
@@ -25,7 +30,9 @@
 
 <body class="container bg-warning mt-2">
 
-<h1><strong>TAG - LABE</strong></h1><h3>Art Premium 250g - verniz localizado frente</h3><hr>
+<figure><img class="logo" src="img/labe.png"></figure>
+
+<h1><strong>TAG - LABE</strong></h1><hr>
 
 	<div class="container">
   <div class="row">
