atualização de preços

--- a/tag.html
+++ b/tag.html
@@ -30,9 +30,10 @@
 
 <body class="container bg-warning mt-2">
 
-<figure><img class="logo" src="img/labe.png"></figure>
+<figure class="rounded mx-auto d-block"><img class="logo" colspan="2" src="img/labe.png"></figure>
 
 <h1><strong>TAG - LABE</strong></h1><hr>
+<h4>Art Premium 250g verniz localizado total frente</h4>
 
 	<div class="container">
   <div class="row">
@@ -169,7 +170,7 @@
 				<th colspan="2"><img src="img/tap16.jpg" class="rounded mx-auto d-block"></th></tr>
 
 			<tr><th>REF.:</th>
-				<td>TAP3</td></tr>
+				<td>TAP16</td></tr>
 
 			<tr><th>PAPEL</th>
 				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
@@ -200,16 +201,16 @@
 
     <div class="col-sm">
 
-      <!-- TAP4 -->
+      <!-- TAP7 -->
 
       <table class="table bg-light rounded py-3 mt-3">
 		<thead>
 
 			<tr>
-				<th colspan="2"><img src="img/tap4.jpg" class="rounded mx-auto d-block"></th></tr>
+				<th colspan="2"><img src="img/tap7.jpg" class="rounded mx-auto d-block"></th></tr>
 
 			<tr><th>REF.:</th>
-				<td>TAP4</td></tr>
+				<td>TAP7</td></tr>
 
 			<tr><th>PAPEL</th>
 				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
@@ -218,7 +219,45 @@
 				<td>4x1<br></td></tr>
 
 			<tr><th>TAMANHO</th>
-				<td>47x43mm</td></tr>
+				<td>88x22mm</td></tr>
+
+			<tr><th>IMPRESSÃO</th>
+				<td>Offset</td></tr>
+
+			<tr><th>QUANTIDADE</th>
+				<td>1.000</td></tr>
+
+			<tr><th>PÇ FINAL</th>
+				<td><button class="btn btn-success text-white">
+					R$ <strong style="font-size: 30px;">122,40</strong></button></td>
+
+			<tr><th>PÇ UNITÁRIO</th>
+				<td>R$ 0,12</td></tr>
+
+		</thead>
+	</table>
+    </div>
+    <div class="col-sm">
+
+      <!-- TAP8 -->
+
+      <table class="table bg-light rounded py-3 mt-3">
+		<thead>
+
+			<tr>
+				<th colspan="2"><img src="img/tap8.jpg" class="rounded mx-auto d-block"></th></tr>
+
+			<tr><th>REF.:</th>
+				<td>TAP8</td></tr>
+
+			<tr><th>PAPEL</th>
+				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
+
+			<tr><th>COR</th>
+				<td>4x1<br></td></tr>
+
+			<tr><th>TAMANHO</th>
+				<td>88x22mm</td></tr>
 
 			<tr><th>IMPRESSÃO</th>
 				<td>Offset</td></tr>
@@ -228,48 +267,10 @@
 
 			<tr><th>PÇ FINAL</th>
 				<td><button class="btn btn-success text-white">
-					R$ <strong style="font-size: 30px;">134,40</strong></button></td>
+					R$ <strong style="font-size: 30px;">136,80</strong></button></td>
 
 			<tr><th>PÇ UNITÁRIO</th>
 				<td>R$ 0,07</td></tr>
-
-		</thead>
-	</table>
-    </div>
-    <div class="col-sm">
-
-      <!-- TAP15 -->
-
-      <table class="table bg-light rounded py-3 mt-3">
-		<thead>
-
-			<tr>
-				<th colspan="2"><img src="img/tap15.jpg" class="rounded mx-auto d-block"></th></tr>
-
-			<tr><th>REF.:</th>
-				<td>TAP15</td></tr>
-
-			<tr><th>PAPEL</th>
-				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
-
-			<tr><th>COR</th>
-				<td>4x1<br></td></tr>
-
-			<tr><th>TAMANHO</th>
-				<td>87x98mm</td></tr>
-
-			<tr><th>IMPRESSÃO</th>
-				<td>Offset</td></tr>
-
-			<tr><th>QUANTIDADE</th>
-				<td>500</td></tr>
-
-			<tr><th>PÇ FINAL</th>
-				<td><button class="btn btn-success text-white">
-					R$ <strong style="font-size: 30px;">174,00</strong></button></td>
-
-			<tr><th>PÇ UNITÁRIO</th>
-				<td>R$ 0,35</td></tr>
 
 		</thead>
 	</table>
