--- a/tag.html
+++ b/tag.html
@@ -30,7 +30,7 @@
 
 <body class="container bg-warning mt-2">
 
-<figure class="rounded mx-auto d-block"><img class="logo" colspan="2" src="img/labe.png"></figure>
+<div class="rounded mx-auto d-block"><img class="logo" colspan="2" src="img/labe.png"></div>
 
 <h1><strong>TAG - LABE</strong></h1><hr>
 <h4>Art Premium 250g verniz localizado total frente</h4>
@@ -274,6 +274,133 @@
 
 		</thead>
 	</table>
+
+    </div>
+  </div>
+</div>
+
+
+<!-- sec 3 -->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+
+      <!-- TAP11 -->
+
+  <table class="table bg-light rounded py-3 mt-3">
+		<thead>
+
+			<tr>
+				<th colspan="2"><img src="img/tap11.jpg" class="rounded mx-auto d-block"></th></tr>
+
+			<tr><th>REF.:</th>
+				<td>TAP11</td></tr>
+
+			<tr><th>PAPEL</th>
+				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
+
+			<tr><th>COR</th>
+				<td>4x1<br></td></tr>
+
+			<tr><th>TAMANHO</th>
+				<td>87x47mm</td></tr>
+
+			<tr><th>IMPRESSÃO</th>
+				<td>Offset</td></tr>
+
+			<tr><th>QUANTIDADE</th>
+				<td>500</td></tr>
+
+			<tr><th>PÇ FINAL</th>
+				<td><button class="btn btn-success text-white">
+					R$ <strong style="font-size: 30px;">121,20</strong></button></td>
+
+			<tr><th>PÇ UNITÁRIO</th>
+				<td>R$ 0,24</td></tr>
+
+		</thead>
+	</table>
+    </div>
+
+
+    <div class="col-sm">
+
+      <!-- TAP12 -->
+
+      <table class="table bg-light rounded py-3 mt-3">
+		<thead>
+
+			<tr>
+				<th colspan="2"><img src="img/tap12.jpg" class="rounded mx-auto d-block"></th></tr>
+
+			<tr><th>REF.:</th>
+				<td>TAP12</td></tr>
+
+			<tr><th>PAPEL</th>
+				<td><strong>Art Premium 250g verniz localizado total frente</strong></td></tr>
+
+			<tr><th>COR</th>
+				<td>4x1<br></td></tr>
+
+			<tr><th>TAMANHO</th>
+				<td>87x47mm</td></tr>
+
+			<tr><th>IMPRESSÃO</th>
+				<td>Offset</td></tr>
+
+			<tr><th>QUANTIDADE</th>
+				<td>1.000</td></tr>
+
+			<tr><th>PÇ FINAL</th>
+				<td><button class="btn btn-success text-white">
+					R$ <strong style="font-size: 30px;">136,80</strong></button></td>
+
+			<tr><th>PÇ UNITÁRIO</th>
+				<td>R$ 0,14</td></tr>
+
+		</thead>
+	</table>
+    </div>
+    <div class="col-sm">
+
+      <!-- TDF81100 -->
+
+      <table class="table bg-light rounded py-3 mt-3">
+		<thead>
+
+			<tr>
+				<th colspan="2"><img src="img/tdf81100.jpg" class="rounded mx-auto d-block"></th></tr>
+
+			<tr><th>REF.:</th>
+				<td>TDF81100</td></tr>
+
+			<tr><th>PAPEL</th>
+				<td><strong>Couchê 250g verniz localizado frente</strong></td></tr>
+
+			<tr><th>COR</th>
+				<td>4x1<br></td></tr>
+
+			<tr><th>TAMANHO</th>
+				<td>179x48mm</td></tr>
+
+			<tr><th>IMPRESSÃO</th>
+				<td>Digital</td></tr>
+
+			<tr><th>QUANTIDADE</th>
+				<td>100</td></tr>
+
+			<tr><th>PÇ FINAL</th>
+				<td><button class="btn btn-success text-white">
+					R$ <strong style="font-size: 30px;">171,60</strong></button></td>
+
+			<tr><th>PÇ UNITÁRIO</th>
+				<td>R$ 1,72</td></tr>
+
+		</thead>
+	</table>
+	
     </div>
   </div>
 </div>
