--- a/cardapio_fominha.html
+++ b/cardapio_fominha.html
@@ -29,7 +29,7 @@
 
 		table {
 			border-collapse: collapse;
-			border-color: #000;
+			border-color: black;
 		}
 
 		thead {
@@ -90,7 +90,7 @@
 	
 <img src="mktplace/fominha.png"><br>
 
-<table border="1" width="100%">
+<table class="table table-striped table-bordered" border="1" width="100%" style="border-color: #000;">
 	<thead>
 		<tr>
 			<th>Nº</th>
@@ -205,8 +205,9 @@
 
 <h1 style="text-align: center;">FAÇA SEU PEDIDO PELO WHATSAPP!!!</h1><br>
 
-<a href="https://api.whatsapp.com/send?phone=5585989688837&text=Ol%C3%A1%20gostaria%20de%20fazer%20meu%20pedido...">
-<button><strong>CLIQUE AQUI</strong></button></a><br><br>
+<div style="margin-left: auto; margin-right: auto; display: block; text-align: center;">
+	<a href="https://api.whatsapp.com/send?phone=5585989688837&text=Ol%C3%A1%20gostaria%20de%20fazer%20meu%20pedido...">
+<button class="btn btn-success">CLIQUE AQUI</button></a><br><br></div>
 
 <p style="text-align: center;"><strong>Av. Humberto Monte, 997</strong><br>esquina com rua Francisca Clotilde<br>
 agradecemos sua preferência!
@@ -214,7 +215,10 @@ agradecemos sua preferência!
 
 <hr style="color: #fff;"><br>
 
-<a href="https://www.instagram.com/labedigital/?hl=pt-br" style="text-align: center;">LABE PANFLETO DIGITAL</a><br><p style="text-align: center;"> <em>---------- Designer ----------<em><a style="margin-top: 0px;" href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%20Berg!"><h2 style="text-align: center;">Berg Nunes</h2></a>
+
+<div class="rounded bg-light mt-3 py-3">
+<a href="https://www.instagram.com/labedigital/?hl=pt-br" style="text-align: center;">LABE PANFLETO DIGITAL</a><br>
+<p style="text-align: center;"><em>---------- Designer ----------</em></p><a style="margin-top: 0px;" href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%20Berg!"><h2 style="text-align: center;">Berg Nunes</h2></a></div><br><br>
 
 </body>
 
