atualização de perfil

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
 									<h3>Trabalho e moro em Fortaleza/CE</h3>
 
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>
+
+									Atuo na criação de layout para impressos de diversas naturezas, tais como revistas, livros, cartazes, folders, jornais, vitrines, outdoors e demais formatos, tanto quanto daqueles que empregram recursos próprios aos meios virtuais.
+									<br>
+									Também como produtor gráfico e Diretor de arte, acompanho os trabalhos de impressão e acabamento de impressos em geral.
+									<br>
+									Crio marcas e logotipos, além de projetar e participar de tarefas de implantação relativas à criação de identidades visuais e estabelecer parâmetros para a utilização correta da marca.</p>
 
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
