--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 									<h3>Trabalho e moro em Fortaleza/CE</h3>
 
-									Atuo na criação de layout para impressos de diversas naturezas, tais como revistas, livros, cartazes, folders, jornais, vitrines, outdoors e demais formatos, tanto quanto daqueles que empregram recursos próprios aos meios virtuais.
+									Atuo na criação de layout para impressos de diversas naturezas, tais como revistas, livros, cartazes, folders, jornais, vitrines, outdoors e demais formatos, tanto quanto daqueles que empregram recursos próprios aos meios virtuais.<br>
 									<br>
 									Também como produtor gráfico e Diretor de arte, acompanho os trabalhos de impressão e acabamento de impressos em geral.
 									<br>
@@ -37,7 +37,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/pic01_berg.jpg" alt="" />
 								</div>
 							</section>
 
