atualização foto de perfil

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Olá, meu nome é Berg<br />
-									e sou Designer</h1>
+									<h1>Olá, meu nome é Berg</h1><br />
+									<h2 style="margin-top: -5px;">e sou Designer</h2>
 
-									<h3>Trabalho e moro em Fortaleza/CE</h3>
+									<hr style="margin-top: 0px;">
+
+									<h3 style="margin-top: -20px;">Trabalho e moro em Fortaleza/CE</h3>
 
 									Atuo na criação de layout para impressos de diversas naturezas, tais como revistas, livros, cartazes, folders, jornais, vitrines, outdoors e demais formatos, tanto quanto daqueles que empregram recursos próprios aos meios virtuais.<br>
-									<br>
 									Também como produtor gráfico e Diretor de arte, acompanho os trabalhos de impressão e acabamento de impressos em geral.
 									<br>
 									Crio marcas e logotipos, além de projetar e participar de tarefas de implantação relativas à criação de identidades visuais e estabelecer parâmetros para a utilização correta da marca.</p>
@@ -37,7 +38,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01_berg.jpg" alt="" />
+									<img src="images/pic01_berg4.jpg" alt="" />
 								</div>
 							</section>
 
