--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Um pouco sobre mim...</h2>
+									<p>Filho de músico e de uma costureira, meu pai tocava nas noites de Fortaleza e passava o dia conosco (eu e minha irmã) ele decidiu meu nome ainda na adolecência, não sei se meu nome influenciou para entrar na área, mas a influência direta de meu pai tenho certeza, nos anos 2000 ele me levava as gráficas para imprimir suas capas de CD's e naquele ambiente despertei o interresse por softwares de criação, ele tem como hobby ficar desenhando, aquilo maravilhava tanto a mim quanto a Natalia que hoje é artista por conta dessa referência "acretido eu". Gutenberg não foi designer, ele foi tipográfro, mas a tipografia é design. </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
