meta para celular

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
 									<h2 class="major">Um pouco sobre mim...</h2>
-									<p>Filho de músico e de uma costureira, meu pai tocava nas noites de Fortaleza e passava o dia conosco (eu e minha irmã) ele decidiu meu nome ainda na adolecência, não sei se meu nome influenciou para entrar na área, mas a influência direta de meu pai tenho certeza, nos anos 2000 ele me levava as gráficas para imprimir suas capas de CD's e naquele ambiente despertei o interresse por softwares de criação, ele tem como hobby ficar desenhando, aquilo maravilhava tanto a mim quanto a Natalia que hoje é artista por conta dessa referência "acretido eu". Gutenberg não foi designer, ele foi tipográfro, mas a tipografia é design. </p>
+									<p>Filho de músico e de uma costureira, meu pai tocava nas noites de Fortaleza e passava o dia conosco (eu e minha irmã) ele decidiu meu nome ainda na adolecência, não sei se meu nome influenciou para entrar na área, mas a influência direta de meu pai tenho certeza, nos anos 2000 ele me levava as gráficas para imprimir suas capas de CD's e naquele ambiente despertei o interresse por softwares de criação, ele t como hobby ficar desenhando, aquilo maravilhava tanto a mim quanto a Natalia que hoje é artista por conta dessa referência "acretido eu". Gutenberg não foi designer, ele foi tipográfro, mas a tipografia é design. </p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
@@ -415,7 +415,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. ReDesign: <a href="#">LABE digital</a>.</div>
+							<div class="copyright">&copy;ReDesign: <a href="#">LABE digital</a>.</div>
 
 					</div>
 
