--- a/tag.html
+++ b/tag.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-	<title>TAG Display</title>
+	<title style="color: black;">TAG Display</title>
 
 
 		<!-- boot strap css -->
