--- a/tab_cidiane_sena.html
+++ b/tab_cidiane_sena.html
@@ -33,7 +33,7 @@
 	<!-- <div class="bg-info">texto</div>
 	<div class="bg-danger">texto</div> -->
 
-	<table class="table table-striped bg-light border-none">
+	<table class="table table-striped bg-light border-none table-hover">
 		<thead><strong>CABELO</strong></thead>
 		<tr><td>ESCOVA CURTA</td><th>R$ 20,00</th></tr>
 		<tr><td>ESCOVA MÉDIA</td><th>R$ 25,00</th></tr>
@@ -71,7 +71,7 @@
 		<tr><td>MAQUIAGEM a partir de</td><th>R$ 60,00</th></tr>
 	</table>
 
-	<table class="table table-striped bg-light border-none">
+	<table class="table table-striped bg-light border-none table-hover">
 		<thead><strong>UNHAS</strong></thead>
 		<tr><td>MANICURE</td><th>R$ 20,00</th></tr>
 		<tr><td>PEDICURE</td><th>R$ 20,00</th></tr>
@@ -85,7 +85,7 @@
 		<tr><td>ADESIVO "cada"</td><th>R$ 2,00</th></tr>
 	</table>
 
-	<table class="table table-striped bg-light border-none">
+	<table class="table table-striped bg-light border-none table-hover">
 		<thead><strong>DEPILAÇÃO</strong></thead>
 		<tr><td>AXILA</td><th>R$ 12,00</th></tr>
 		<tr><td>BUÇO</td><th>R$ 10,00</th></tr>
