--- a/tab_cidiane_sena.html
+++ b/tab_cidiane_sena.html
@@ -19,7 +19,7 @@
 		}
 
 		td {
-			font-size: 12px;
+			font-size: 13px;
 		}
 
 
@@ -117,7 +117,7 @@
 
 	<a href="https://api.whatsapp.com/send?phone=5585986308792&text=Ol%C3%A1%20gostaria%20de%20agendar%20um%20hor%C3%A1rio..."><button class="btn btn-success mx-auto d-block" style="width: 100%; height: 3rem;">Whatsapp</button></a><br>
 
-	<footer class="text-center">TABELA SOFRERÁ AJUSTES A PARTIR DE 15 DE OUTUBRO.</footer>
+	<footer class="text-center">TABELA SOFRERÁ AJUSTES A PARTIR DE 15 DE OUTUBRO.</footer><br>
 
 </body>
 
