--- a/tag.html
+++ b/tag.html
@@ -765,7 +765,7 @@
 						<tr><th colspan="2"><img src="img/ths2.jpg" class="mx-auto d-block"></th></tr>
 						<tr><th>REF.:</th><td>THS2</td></tr>
 						<tr><th>PAPEL</th><td>Couchê 300g Laminação fosca e 
-							<button class="btn btn-outline-warning text-black btn-sm disabled" style="width: 50%;">
+							<button class="btn btn-warning text-black btn-sm disabled" style="width: 50%;">
 							Hotstamping</button></td></tr>
 						<tr><th>COR</th><td>4X4 &nbsp;&nbsp;<img src="img/4x4.svg" style="width: 40%;"></td></tr></th>
 						<tr><th>TAMANHO</th><td>47x43mm</td></tr>
