--- a/tag.html
+++ b/tag.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
-	<title>DIV</title>
+	<title>Tag's LABE digital</title>
 
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -692,7 +692,7 @@
 					<th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th>
 						<tr><th colspan="2"><img src="img/t251007.jpg" class="mx-auto d-block"></th></tr>
 						<tr><th>REF.:</th><td>T251007</td></tr>
-						<tr><th>PAPEL</th><td>Couchê 250g - verniz UV total frente</td></tr>
+						<tr><th>PAPEL</th><td>Couchê 250g <br>verniz UV total frente</td></tr>
 						<tr><th>COR</th><td>4X4 &nbsp;&nbsp;<img src="img/4x4.svg" style="width: 40%;"></td></tr></th>
 						<tr><th>TAMANHO</th><td>47x43mm</td></tr>
 						<tr><th>IMPRESSÃO</th><td>Offset</td></tr>
@@ -2985,6 +2985,9 @@ MODELO
 
 </div><!--  linha 01 -->
 </div>
+
+<div><h2>Entre em contato conosco</h2>
+	<a href="#"><button>WHATSAPP</button></a>
 
 
 </body>
