--- a/tag.html
+++ b/tag.html
@@ -2986,8 +2986,9 @@ MODELO
 </div><!--  linha 01 -->
 </div>
 
-<div><h2>Entre em contato conosco</h2>
-	<a href="#"><button>WHATSAPP</button></a>
+<div class="text-center"><h2 class="text-center">Entre em contato conosco</h2>
+	<a class="text-center" href="#"><button class="btn btn-success btn-lg text-white mb-5"
+		style="width: 45%; height: 200%;"><strong>WHATSAPP</strong></button></a></div>
 
 
 </body>
