--- a/tag.html
+++ b/tag.html
@@ -2987,7 +2987,7 @@ MODELO
 </div>
 
 <div class="text-center"><h2 class="text-center">Entre em contato conosco</h2>
-	<a class="text-center" href="#"><button class="btn btn-success btn-lg text-white mb-5"
+	<a class="text-center" href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20Tag's..."><button class="btn btn-success btn-lg text-white mb-5"
 		style="width: 45%; height: 200%;"><strong>WHATSAPP</strong></button></a></div>
 
 
