--- a/allmylinks.html
+++ b/allmylinks.html
@@ -8,9 +8,50 @@
 	<!-- CSS only -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
+	<style type="text/css">
+		
+		h1 {
+			font-family: montserrat;
+		}
+
+		button {
+			width: 100%;
+		}
+
+		body {
+			width: 20%;
+		}
+
+	</style>
+
 </head>
 
-<body class="container bg-dark">
+<body class="container bg-light mt-5">
+
+	<div class="container text-center">
+
+		<img class="mb-4 rounded-circle" src="images/bn.jpg" style="width: 10rem;">
+
+		<h1>AQUI VOCÊ ENCONTRA<br>
+			O QUE QUER DE MIM...</h1>
+			<h5>...talvez se anima muito não.</h5>
+
+
+			<a href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%2C%20Berg..">	<button class="btn btn-success btn-lg mb-2">WHATSAPP</button></a>
+
+			<a href="#"></a><button class="btn btn-dark text btn-lg mb-2">GITHUB</button></a>
+
+			<a href="#"></a><button class="btn btn-primary btn-lg mb-2">FACEBOOK</button></a>
+
+			<a href="#"></a><button class="btn btn-warning btn-lg mb-4">LABE DIGITAL</button></a>
+
+			<h2 class="">ORÇAMENTOS</h2><br>
+
+			<a href="#"></a><button class="btn btn-info btn-lg mb-2">TAG'S</button></a>
+
+			<a href="#"></a><button class="btn btn-dark btn-lg mb-5">CARTÃO DE VISITA</button></a>
+		
+	</div>
 
 </body>
 </html>
