--- a/tag.html
+++ b/tag.html
@@ -26,6 +26,27 @@
 
 <body class="container bg-warning mt-5">
 
+	<!-- <nav class="container navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Navbar</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav> -->
+
 <div class="container"> <!-- linha 01 -->
 <div class="row">
 
@@ -2989,6 +3010,7 @@ MODELO
 <div class="text-center"><h2 class="text-center">Entre em contato conosco</h2>
 	<a class="text-center" href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%2C%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20Tag's..."><button class="btn btn-success btn-lg text-white mb-5"
 		style="width: 45%; height: 200%;"><strong>WHATSAPP</strong></button></a></div>
+
 
 
 </body>
