--- a/allmylinks.html
+++ b/allmylinks.html
@@ -34,7 +34,7 @@
 
 		<h1>AQUI VOCÊ ENCONTRA<br>
 			O QUE QUER DE MIM...</h1>
-			<h5>...talvez se anima muito não.</h5>
+			<h5>...talvez, se anima muito não.</h5>
 
 
 			<a href="https://api.whatsapp.com/send?phone=5585996906297&text=Ol%C3%A1%2C%20Berg..">	<button class="btn btn-success btn-lg mb-2">WHATSAPP</button></a>
@@ -47,7 +47,7 @@
 
 			<h2 class="">ORÇAMENTOS</h2><br>
 
-			<a href="#"></a><button class="btn btn-info btn-lg mb-2">TAG'S</button></a>
+			<a href="https://bergnunes.github.io/tag.html"></a><button class="btn btn-info btn-lg mb-2">TAG'S</button></a>
 
 			<a href="#"></a><button class="btn btn-dark btn-lg mb-5">CARTÃO DE VISITA</button></a>
 		
