--- a/allmylinks.html
+++ b/allmylinks.html
@@ -47,9 +47,9 @@
 
 			<h2 class="">ORÇAMENTOS</h2><br>
 
-			<a href="https://bergnunes.github.io/tag.html"></a><button class="btn btn-info btn-lg mb-2">TAG'S</button></a>
+			<a href="https://bergnunes.github.io/tag.html"><button class="btn btn-info btn-lg mb-2">TAG'S</button></a>
 
-			<a href="#"></a><button class="btn btn-dark btn-lg mb-5">CARTÃO DE VISITA</button></a>
+			<a href="#"><button class="btn btn-dark btn-lg mb-5">CARTÃO DE VISITA</button></a>
 		
 	</div>
 
