--- a/allmylinks.html
+++ b/allmylinks.html
@@ -49,7 +49,7 @@
 
 			<a href="https://bergnunes.github.io/tag.html"><button class="btn btn-info btn-lg mb-2">Tag´s</button></a>
 
-			<a href="#"><button class="btn btn-dark btn-lg mb-5">Cartões de Visita</button></a>
+			<a href="https://bergnunes.github.io/cartao_.html"><button class="btn btn-dark btn-lg mb-5">Cartões de Visita</button></a>
 		
 	</div>
 
