--- a/cartao_.html
+++ b/cartao_.html
@@ -861,5 +861,74 @@
 </span>
 </article>
 
+<article class="container"> <!-- linha 010 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 031 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CS4X450CO.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CS4X450CO</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação brilho <br> frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>50</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 1,22</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>61,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>58,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3">
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/POP006C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>POP006C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,36</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>358,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>340,85</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3">
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/POP015.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>POP015</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,62</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>62,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>59,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
 </body>
 </html>
