--- a/cartao_.html
+++ b/cartao_.html
@@ -861,7 +861,7 @@
 </span>
 </article>
 
-<article class="container"> <!-- linha 010 -->
+<article class="container"> <!-- linha 011 -->
 	<span class="row">
 		
 		<div class="col-sm mt-3"> <!-- 031 -->
@@ -885,7 +885,7 @@
 			</table>
 		</div>
 
-		<div class="col-sm mt-3">
+		<div class="col-sm mt-3"> <!-- 032 -->
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
@@ -907,7 +907,7 @@
 		</div>
 
 		<div class="col-sm mt-3">
-			<table class="table bg-white mt-3">
+			<table class="table bg-white mt-3"> <!-- 033 -->
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
 					<tr><th colspan="2"><img src="cta/POP015.jpg" class="mx-auto d-block"></th></tr>
@@ -923,6 +923,145 @@
 						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
 						<strong>59,00</strong></button></a></th></tr>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha 12 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 034 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/POP01544.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>POP01544</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,40</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>199,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>113,20</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 035 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/POP015C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>POP015C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,45</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>112,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>107,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 036 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFLO41000C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO41000C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,40</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>403,20</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>383,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- linha 013 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3"> <!-- 037 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFLO4100C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4100C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,86</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>86,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>82,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 038 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFLO4250C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4250C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,50</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>124,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>118,50</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 039 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CFLO4500C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4500C</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>500</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,43</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>216,00</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>205,20</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
 				</thead>
 			</table>
 		</div>
