correção de imagens

--- a/cartao_.html
+++ b/cartao_.html
@@ -979,10 +979,10 @@
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
-					<tr><th colspan="2"><img src="cta/CFLO41000C.jpg" class="mx-auto d-block"></th></tr>
-					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO41000C</strong></button></th></tr>
+					<tr><th colspan="2"><img src="cta/CLFO41000C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CLFO41000C</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
-					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
 					<tr><th>QUANTIDADE</th><td>1.000</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
 					<tr><th>UNIDADE</th><td>R$ 0,40</td></tr>
@@ -1006,10 +1006,10 @@
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
-					<tr><th colspan="2"><img src="cta/CFLO4100C.jpg" class="mx-auto d-block"></th></tr>
-					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4100C</strong></button></th></tr>
+					<tr><th colspan="2"><img src="cta/CLFO4100C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CLFO4100C</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
-					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
 					<tr><th>QUANTIDADE</th><td>100</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
 					<tr><th>UNIDADE</th><td>R$ 0,86</td></tr>
@@ -1027,10 +1027,10 @@
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
-					<tr><th colspan="2"><img src="cta/CFLO4250C.jpg" class="mx-auto d-block"></th></tr>
-					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4250C</strong></button></th></tr>
+					<tr><th colspan="2"><img src="cta/CLFO4250C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CLFO4250C</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
-					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
 					<tr><th>QUANTIDADE</th><td>250</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
 					<tr><th>UNIDADE</th><td>R$ 0,50</td></tr>
@@ -1048,10 +1048,10 @@
 			<table class="table bg-white mt-3">
 				<thead>
 					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
-					<tr><th colspan="2"><img src="cta/CFLO4500C.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><img src="cta/CLFO4500C.jpg" class="mx-auto d-block"></th></tr>
 					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CFLO4500C</strong></button></th></tr>
 					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>frente e verso</td></tr>
-					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x4</button></td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
 					<tr><th>QUANTIDADE</th><td>500</td></tr>
 					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
 					<tr><th>UNIDADE</th><td>R$ 0,43</td></tr>
