--- a/cartao_.html
+++ b/cartao_.html
@@ -22,23 +22,23 @@
       <img src="img/labe.svg" alt="" width="45">
     </a>
     
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"><strong>LABE DIGITAL</strong></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Inicial</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Tag´s</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#">Pix</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link disabled">Guia fechamento de arquivos</a>
         </li>
       </ul>
     </div>
@@ -1059,7 +1059,7 @@
 						<strong>216,00</strong></button></a></td></tr>
 					<tr><th colspan="2">
 						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
-						<strong>205,20</strong></button></a></th></tr>
+						<strong>10,80</strong></button></a></th></tr>
 					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
 				</thead>
 				</thead>
@@ -1068,6 +1068,146 @@
 
 	</span>
 </article>
+
+<article class="container"> <!-- linha 014 -->
+	<span class="row">
+		
+		<div class="col-sm mt-3">
+			<table class="table bg-white mt-3"> <!-- 040 -->
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%;"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED100.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED100</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,70</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>69,60</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>66,10</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>	
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 041 -->
+			<table class="table bg-white mt-3"> 
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED100A.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED100A</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-info disabled btn-sm">4x1</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,74</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>74,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>70,70</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+		<div class="col-sm mt-3"> <!-- 042 -->
+			<table class="table bg-white mt-3">
+				<thead>
+					<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED100B.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED100B</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4</button></td></tr>
+					<tr><th>QUANTIDADE</th><td>100</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,82</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>81,60</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>77,50</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+				</thead>
+			</table>
+		</div>
+
+	</span>
+</article>
+
+<article class="container"> <!-- tabela 015 -->
+	<span class="row">
+
+		 <div class="col-sm mt-3"> <!--  043 -->
+		 	<table class="table bg-white mt-3">
+		 		<thead>
+		 			<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED250.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED250</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-light disabled btn-sm">4x0 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,30</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>74,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>70,65</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+		 		</thead>
+		 	</table>
+		 </div>
+
+		 <div class="col-sm mt-3"> <!-- 044 -->
+		 	<table class="table bg-white mt-3">
+		 		<thead>
+		 			<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED250A.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED250A</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-secondary disabled btn-sm">4x1 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,31</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>76,80</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>73,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+		 		</thead>
+		 	</table>
+		 </div>
+
+		 <div class="col-sm mt-3"> <!-- 045 -->
+		 	<table class="table bg-white mt-3">
+		 		<thead>
+		 			<tr><th colspan="2"><img src="img/labe.svg" class="mx-auto d-block" style="width: 15%"></th></tr>
+					<tr><th colspan="2"><img src="cta/CED250B.jpg" class="mx-auto d-block"></th></tr>
+					<tr><th colspan="2"><button class="btn btn-secondary disabled btn-sm"><strong>CED250B</strong></button></th></tr>
+					<tr><th>PAPEL</th><td>Couchê brilho 275g <br> laminação fosco <br>sem verniz</td></tr>
+					<tr><th>COR</th><td><button class="btn btn-warning disabled btn-sm">4x4 </button></td></tr>
+					<tr><th>QUANTIDADE</th><td>250</td></tr>
+					<tr><th>TAMANHO</th><td>87x47mm</td></tr>
+					<tr><th>UNIDADE</th><td>R$ 0,35</td></tr>
+					<tr><th>VENDA</th><td><a href="#"><button class="btn btn-success btn-lg"><img src="cta/shop.svg"> R$ 
+						<strong>86,40</strong></button></a></td></tr>
+					<tr><th colspan="2">
+						<a href="https://nubank.com.br/pagar/15spx0/7JceW2n4f1" target="_blank"><button class="btn btn-primary btn-sm mx-auto d-block"><img src="cta/pix.svg" style="width: 4%;">&nbsp;%5 desconto PIX R$ 
+						<strong>82,00</strong></button></a></th></tr>
+					<tr><td colspan="2" class="text-center"><i>frente fixo R$ 15,00 para Fortaleza/CE</i></td></tr>
+		 		</thead>
+		 	</table>
+		 </div>
+
+	</span>
+</article>
+
+
 
 </body>
 </html>
